--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Continuous Integration
 on:
   push:
-    branches:
-      - master
+#    branches:
+#      - master
   pull_request:
     types: [ opened, synchronize ]
     branches:
@@ -53,159 +53,159 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew
 
-  csharp-build:
-    name: C# ${{ matrix.dotnet }}
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        dotnet: [ '3.1.301' ]
-    env:
-      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-      DOTNET_CLI_TELEMETRY_OPTOUT: 1
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Cache Gradle wrappers
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-      - name: Cache NuGet dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('csharp/**/*.sln') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: ${{ matrix.dotnet }}
-      - name: Build
-        run: ./csharp/build.sh
-      - name: Run tests
-        run: ./csharp/runtests.sh
-      - name: Pack
-        run: ./csharp/pack.sh
-
-  cpp-gcc-build:
-    name: C++ GCC ${{ matrix.version }}
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [ '6', '7', '8', '9', '10' ]
-    env:
-      CC: gcc-${{ matrix.version }}
-      CXX: g++-${{ matrix.version }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Cache Gradle wrappers
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-      - name: Install compiler
-        run: |
-          sudo add-apt-repository "deb http://dk.archive.ubuntu.com/ubuntu/ bionic main universe"
-          sudo apt-get install -y g++-${{ matrix.version }} libsparsehash-dev libidn11
-          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
-          tar xf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
-          echo "cmake-${CMAKE_VERSION}-Linux-x86_64/bin" >> $GITHUB_PATH
-      - name: Build
-        run: cmake --version && ./cppbuild/cppbuild
-
-  cpp-clang-build:
-    name: C++ Clang ${{ matrix.version }}
-    runs-on: ubuntu-18.04
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [ '6.0', '7', '8', '9', '10', '11', '12' ]
-    env:
-      CC: clang-${{ matrix.version }}
-      CXX: clang++-${{ matrix.version }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Cache Gradle wrappers
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-      - name: Install compiler
-        run: |
-          curl -L https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-${{ matrix.version }} main"
-          sudo apt-get update
-          sudo apt-get install -y clang-${{ matrix.version }} libsparsehash-dev libidn11
-          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
-          tar xf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
-          echo "cmake-${CMAKE_VERSION}-Linux-x86_64/bin" >> $GITHUB_PATH
-      - name: Build
-        run: cmake --version && ./cppbuild/cppbuild
-
-  cpp-clang-macos-build:
-    name: C++ Xcode ${{ matrix.version }} (macOS)
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-    env:
-      CC: clang
-      CXX: clang++
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install CMake
-        run: |
-          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Darwin-x86_64.tar.gz
-          tar xf cmake-${CMAKE_VERSION}-Darwin-x86_64.tar.gz
-          echo "cmake-${CMAKE_VERSION}-Darwin-x86_64/CMake.app/Contents/bin" >> $GITHUB_PATH
-      - name: Build
-        run: cmake --version && ./cppbuild/cppbuild
-
-  cpp-msvc-build:
-    name: C++ MSVC (Windows)
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-    env:
-      CC: cl
-      CXX: cl
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install CMake
-        run: |
-          $client = new-object System.Net.WebClient
-          $client.DownloadFile("https://github.com/Kitware/CMake/releases/download/v$Env:CMAKE_VERSION/cmake-$Env:CMAKE_VERSION-win64-x64.zip","cmake-$Env:CMAKE_VERSION-win64-x64.zip")
-          7z x cmake-$Env:CMAKE_VERSION-win64-x64.zip
-          echo "cmake-$Env:CMAKE_VERSION-win64-x64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
-      - name: Build
-        run: cppbuild/cppbuild.cmd
+#  csharp-build:
+#    name: C# ${{ matrix.dotnet }}
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        dotnet: [ '3.1.301' ]
+#    env:
+#      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+#      DOTNET_CLI_TELEMETRY_OPTOUT: 1
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Cache Gradle dependencies
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/caches
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#      - name: Cache Gradle wrappers
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+#      - name: Cache NuGet dependencies
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.nuget/packages
+#          key: ${{ runner.os }}-nuget-${{ hashFiles('csharp/**/*.sln') }}
+#          restore-keys: |
+#            ${{ runner.os }}-nuget-
+#      - name: Setup dotnet
+#        uses: actions/setup-dotnet@v1
+#        with:
+#          dotnet-version: ${{ matrix.dotnet }}
+#      - name: Build
+#        run: ./csharp/build.sh
+#      - name: Run tests
+#        run: ./csharp/runtests.sh
+#      - name: Pack
+#        run: ./csharp/pack.sh
+#
+#  cpp-gcc-build:
+#    name: C++ GCC ${{ matrix.version }}
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        version: [ '6', '7', '8', '9', '10' ]
+#    env:
+#      CC: gcc-${{ matrix.version }}
+#      CXX: g++-${{ matrix.version }}
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Cache Gradle dependencies
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/caches
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#      - name: Cache Gradle wrappers
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+#      - name: Install compiler
+#        run: |
+#          sudo add-apt-repository "deb http://dk.archive.ubuntu.com/ubuntu/ bionic main universe"
+#          sudo apt-get install -y g++-${{ matrix.version }} libsparsehash-dev libidn11
+#          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
+#          tar xf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
+#          echo "cmake-${CMAKE_VERSION}-Linux-x86_64/bin" >> $GITHUB_PATH
+#      - name: Build
+#        run: cmake --version && ./cppbuild/cppbuild
+#
+#  cpp-clang-build:
+#    name: C++ Clang ${{ matrix.version }}
+#    runs-on: ubuntu-18.04
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        version: [ '6.0', '7', '8', '9', '10', '11', '12' ]
+#    env:
+#      CC: clang-${{ matrix.version }}
+#      CXX: clang++-${{ matrix.version }}
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Cache Gradle dependencies
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/caches
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#      - name: Cache Gradle wrappers
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+#      - name: Install compiler
+#        run: |
+#          curl -L https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+#          sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-${{ matrix.version }} main"
+#          sudo apt-get update
+#          sudo apt-get install -y clang-${{ matrix.version }} libsparsehash-dev libidn11
+#          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
+#          tar xf cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
+#          echo "cmake-${CMAKE_VERSION}-Linux-x86_64/bin" >> $GITHUB_PATH
+#      - name: Build
+#        run: cmake --version && ./cppbuild/cppbuild
+#
+#  cpp-clang-macos-build:
+#    name: C++ Xcode ${{ matrix.version }} (macOS)
+#    runs-on: macos-latest
+#    strategy:
+#      fail-fast: false
+#    env:
+#      CC: clang
+#      CXX: clang++
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Install CMake
+#        run: |
+#          curl -O -L https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Darwin-x86_64.tar.gz
+#          tar xf cmake-${CMAKE_VERSION}-Darwin-x86_64.tar.gz
+#          echo "cmake-${CMAKE_VERSION}-Darwin-x86_64/CMake.app/Contents/bin" >> $GITHUB_PATH
+#      - name: Build
+#        run: cmake --version && ./cppbuild/cppbuild
+#
+#  cpp-msvc-build:
+#    name: C++ MSVC (Windows)
+#    runs-on: windows-latest
+#    strategy:
+#      fail-fast: false
+#    env:
+#      CC: cl
+#      CXX: cl
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Install CMake
+#        run: |
+#          $client = new-object System.Net.WebClient
+#          $client.DownloadFile("https://github.com/Kitware/CMake/releases/download/v$Env:CMAKE_VERSION/cmake-$Env:CMAKE_VERSION-win64-x64.zip","cmake-$Env:CMAKE_VERSION-win64-x64.zip")
+#          7z x cmake-$Env:CMAKE_VERSION-win64-x64.zip
+#          echo "cmake-$Env:CMAKE_VERSION-win64-x64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+#      - name: Build
+#        run: cppbuild/cppbuild.cmd
 
   rust-build:
     name: Rust ${{ matrix.rust }}
