--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,45 +13,45 @@ env:
   CMAKE_VERSION: "3.6.1"
 
 jobs:
-  java-build:
-    name: Java ${{ matrix.java }}
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [ '8', '11', '16', '17-ea' ]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Cache Gradle wrappers
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-      - name: Setup java
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: ${{ matrix.java }}
-      - name: Setup BUILD_JAVA_HOME & BUILD_JAVA_VERSION
-        run: |
-          java -Xinternalversion
-          echo "BUILD_JAVA_HOME=${JAVA_HOME}" >> $GITHUB_ENV
-          echo "BUILD_JAVA_VERSION=${{ matrix.java }}" >> $GITHUB_ENV
-      - name: Setup java 8 to run the Gradle script
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: 8
-      - name: Build with Gradle
-        run: ./gradlew
+#  java-build:
+#    name: Java ${{ matrix.java }}
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        java: [ '8', '11', '16', '17-ea' ]
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Cache Gradle dependencies
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/caches
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
+#      - name: Cache Gradle wrappers
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+#      - name: Setup java
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: ${{ matrix.java }}
+#      - name: Setup BUILD_JAVA_HOME & BUILD_JAVA_VERSION
+#        run: |
+#          java -Xinternalversion
+#          echo "BUILD_JAVA_HOME=${JAVA_HOME}" >> $GITHUB_ENV
+#          echo "BUILD_JAVA_VERSION=${{ matrix.java }}" >> $GITHUB_ENV
+#      - name: Setup java 8 to run the Gradle script
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: 8
+#      - name: Build with Gradle
+#        run: ./gradlew
 
 #  csharp-build:
 #    name: C# ${{ matrix.dotnet }}
@@ -231,18 +231,22 @@ jobs:
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
       - name: Rust setup
         uses: actions-rs/toolchain@v1
+        working-directory: ./rust
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
           components: clippy
       - uses: actions-rs/cargo@v1
+        working-directory: ./rust
         with:
           command: build
       - uses: actions-rs/cargo@v1
+        working-directory: ./rust
         with:
           command: test
       - uses: actions-rs/cargo@v1
+        working-directory: ./rust~
         with:
           command: clippy
           args: -- -D warnings
