[Rust] setting working dir for rust steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,5 +236,4 @@ jobs:
           toolchain: ${{ matrix.rust }}
           override: true
           components: clippy
-      - run: |
-          cd ./rust && cargo test
+      - run: ./gradlew runRustTests
