--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,7 +213,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: [ stable, nightly ]
+        rust: [ stable, beta, nightly ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -235,5 +235,4 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
-          components: clippy
       - run: ./gradlew runRustTests
