--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -19,7 +19,7 @@ on:
 
 concurrency:
   group: slow-${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: ${{ github.event_name != 'schedule' }}
 
 env:
   GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.java.installations.auto-detect=false -Dorg.gradle.warning.mode=fail'
