--- a/csharp/sbe-dll/sbe-dll.csproj
+++ b/csharp/sbe-dll/sbe-dll.csproj
@@ -13,7 +13,8 @@
     <RepositoryUrl>https://github.com/aeron-io/simple-binary-encoding</RepositoryUrl>
     <PackageTags>SBE;Marshaling;Low;Latency;Simple;Binary;Encoding</PackageTags>
     <PackageId>sbe-tool</PackageId>
-    <PackageVersion>1.23.1.1</PackageVersion>
+    <VersionFile>$(MSBuildProjectDirectory)\..\..\version.txt</VersionFile>
+    <PackageVersion>$([System.IO.File]::ReadAllText($(VersionFile)).TrimEnd())</PackageVersion>
     <Title>Simple Binary Encoding for .NET</Title>
     <Description>This package contains all you need to define SBE messages and generate C# encoders and decoders. See https://github.com/aeron-io/simple-binary-encoding for more detailed instructions</Description>
     <RepositoryType>git</RepositoryType>
@@ -31,7 +32,7 @@
       <Pack>true</Pack>
       <PackagePath>tools/sbe-tool.sh</PackagePath>
     </None>
-    <None Include="../../sbe-all/build/libs/sbe-all-*-SNAPSHOT.jar">
+    <None Include="../../sbe-all/build/libs/sbe-all-*.jar">
       <Pack>true</Pack>
       <PackagePath>tools/sbe-tool-all.jar</PackagePath>
     </None>
