--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         java: [ '17', '21', '24' ]
-        os: [ 'ubuntu-24.04', 'windows-latest', 'macos-latest' ]
+        os: [ 'ubuntu-24.04', 'windows-latest', 'macos-15' ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -205,7 +205,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ 'macos-latest' ]
+        os: [ 'macos-15' ]
     env:
       CC: clang
       CXX: clang++
