--- a/build.gradle
+++ b/build.gradle
@@ -355,7 +355,7 @@ project(':sbe-tool') {
                 'sbe.validation.xsd': validationXsdPath,
                 'sbe.generate.precedence.checks': 'true',
                 'sbe.java.precedence.checks.property.name': 'sbe.enable.test.precedence.checks',
-                'sbe.keyword.append.token': 'KeywordSuffix',
+                'sbe.keyword.append.token': '$',
                 'sbe.java.generate.dtos': 'true')
         args = ['src/test/resources/example-extension-schema.xml', 'src/test/resources/dto-test-schema.xml']
     }
